appId: app.phraseman
---
- extendedWaitUntil:
    visible:
      id: "lesson1-header-back"
    timeout: 30000

- runFlow:
    when:
      visible:
        id: "lesson1-word-option-0"
    commands:
      - tapOn:
          id: "lesson1-word-option-0"
- runFlow:
    when:
      visible:
        id: "lesson1-word-option-1"
    commands:
      - tapOn:
          id: "lesson1-word-option-1"
- repeat:
    times: 25
    commands:
      - runFlow:
          when:
            visible:
              id: "lesson1-word-option-correct"
          commands:
            - tapOn:
                id: "lesson1-word-option-correct"
- extendedWaitUntil:
    visible:
      id: "lesson1-next"
    timeout: 15000
- tapOn:
    id: "lesson1-next"

- runFlow:
    when:
      visible:
        id: "lesson1-fifty-fifty"
    commands:
      - tapOn:
          id: "lesson1-fifty-fifty"

- repeat:
    times: 70
    commands:
      - repeat:
          times: 25
          commands:
            - runFlow:
                when:
                  visible:
                    id: "lesson1-word-option-correct"
                commands:
                  - tapOn:
                      id: "lesson1-word-option-correct"
      - waitForAnimationToEnd:
          timeout: 1200
      - runFlow:
          when:
            visible:
              id: "lesson1-next"
          commands:
            - tapOn:
                id: "lesson1-next"
      - runFlow:
          when:
            visible:
              id: "lesson-complete-screen"
          commands:
            - assertVisible:
                id: "lesson-complete-screen"

- extendedWaitUntil:
    visible:
      id: "lesson-complete-screen"
    timeout: 45000
- assertVisible:
    id: "lesson-complete-repeat"
- assertVisible:
    id: "lesson-complete-back-home"
